--- a/pages/mine/help/help.wxss
+++ b/pages/mine/help/help.wxss
@@ -43,23 +43,20 @@ page{
   border-radius: 30rpx;
   box-shadow: 0rpx 0rpx 10rpx 3rpx #cecece;
 }
-.help{
+.service{
+  font-size: small;
+  position: absolute;
+  z-index: 100;
+  bottom: 5rpx;
+  left: 35%;
+  width: 30%;
+  font-weight: lighter;
+  background-color: #0A6E92;
+  color: #ffffff;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  background-color: #ffffff;
-  box-shadow: 0rpx 0rpx 10rpx 3rpx #e2e2e2;
-  border-radius: 25rpx;
-  width: 88%;
-  position: absolute;
-  left: 6%;
-  bottom:  10rpx;
-  font-size: smaller;
-  text-align: center;
-  color: #0a6e92;
-}
-.mail{
-  border-bottom: 1rpx #0a6e92 solid;
+  align-items: center;
+justify-content: center
 
   
 }
