客服，图片问题已解决
1.注册页客服功能配置完毕
2.解决了图片加载过程中的压缩过程
3.图标全部改为本地

--- a/pages/mine/help/help.wxml
+++ b/pages/mine/help/help.wxml
@@ -23,7 +23,7 @@
 
 
   <button class='service'  style=' font-size:x-small;'  open-type="contact" >
-       <image class='icon' mode='widthFix' style='width:40rpx;'  src='../../../resource/service.png' ></image>
+       <image mode='widthFix' style='width:40rpx;'  src='../../../resource/service.png' ></image>
   <view>客服</view>
 
   </button>
