--- a/pages/index/index-template/index-template.wxss
+++ b/pages/index/index-template/index-template.wxss
@@ -55,10 +55,11 @@
    background:#e7e6e6;
   border-radius: 8rpx;
   width: 80rpx;
+  height: auto;
   font-size: x-small;
   font-weight: lighter;
   position: absolute;
-  right: 20rpx;
+  right: 3rpx;
   text-align: center;
 
 
@@ -82,8 +83,7 @@ position: relative;
 display: flex;
 flex-direction: row;
 background: rgb(250, 250, 250);
-border-radius: 30rpx;
-max-width: 85%;
+max-width: 90%;
 font-weight: lighter;
 font-size: small;
 margin: 5rpx 0 ;
@@ -103,6 +103,7 @@ left: 0rpx;
 display: flex;
 align-items: center;
 margin: 10rpx 0;
+
 }
 
 .Txtcolor {
@@ -136,7 +137,7 @@ margin: 10rpx 0;
   flex-direction: row;
   background: rgb(250, 250, 250);
   border-radius: 30rpx;
-  max-width: 73%;
+  
   font-weight: lighter;
   font-size: small
 }
@@ -150,10 +151,11 @@ margin: 10rpx 0;
 
 .note-text {
   position: relative;
-  width: 50%;
+  width: 70%;
   left: 15rpx;
   display: flex;
   align-items: center;
+  
 }
 
 .horizon {
