--- a/pages/mine/join/join-template/join-template.wxss
+++ b/pages/mine/join/join-template/join-template.wxss
@@ -18,12 +18,14 @@ top: -40rpx;
 display: flex;
 align-items: center;
 justify-content: center;
-width: 120rpx
+width: 120rpx;
+height: auto;
   
 
 }
 .type-icon{
   width: 120rpx;
+  height: auto;
   position: relative
 
 
@@ -118,6 +120,7 @@ justify-content: center;
   position: absolute;
   right: 230rpx;
   width: 70rpx;
+  height: auto;
 
 
 
@@ -127,6 +130,7 @@ justify-content: center;
   right: 100rpx;
 
   width: 70rpx;
+  height: auto;
 }
 
 
@@ -134,6 +138,7 @@ justify-content: center;
   position: absolute;
   right: 230rpx;
   width: 70rpx;
+  height: auto;
 
 
 }
@@ -142,6 +147,7 @@ justify-content: center;
   right: 100rpx;
 
   width: 70rpx;
+  height: auto;
 }
 
 
@@ -195,10 +201,12 @@ justify-content: center;
 }
 .edit{
   width: 40rpx;
+  height: auto;
 }
 .icon{
  
   width: 60rpx;
+  height: auto;
   
 }
 
@@ -218,6 +226,7 @@ border-radius: 30rpx;
 }
 .exit-icon{
   width: 40rpx;
+  height: auto;
 }
 .horizon2{
   margin:0  50rpx;
