--- a/pages/index/index-template/index-template.wxml
+++ b/pages/index/index-template/index-template.wxml
@@ -18,27 +18,27 @@
     
       <view class='start-end'>
    
-      <view class='start-end-title'>   <image style='  width: 50rpx;' mode='widthFix' src='../../resource/index-start.png'></image>活动集合：</view>
+      <view class='start-end-title'>   <image style='  width: 50rpx; height:auto ' mode='widthFix' src='../../resource/index-start.png'></image>活动集合：</view>
        <view class='start-end-text'>{{start_name}}</view>
        </view>
       <view class='start-end'>
      
-      <view class='start-end-title'> <image style='  width: 50rpx;' mode='widthFix' src='../../resource/index-end.png'></image>活动地点：</view> 
+      <view class='start-end-title'> <image style='  width: 50rpx; height:auto ' mode='widthFix' src='../../resource/index-end.png'></image>活动地点：</view> 
       <view class='start-end-text'>{{end_name}}</view>
       </view>
 
       
       <view class="row">
-        <image style='  width: 50rpx;' mode='widthFix' src='../../resource/index-name.png'></image>活动发起：{{creater_name}}
-        <image style='  width: 50rpx;' mode='widthFix' src='../../resource/{{creater_sex}}.png'></image>
+        <image style='  width: 50rpx; height:auto ' mode='widthFix' src='../../resource/index-name.png'></image>活动发起：{{creater_name}}
+        <image style='width: 50rpx; height:auto  ' mode='widthFix' src='../../resource/{{creater_sex}}.png'></image>
       <view class='member-title'>{{person_type}} </view>
       </view>
       <view class='row'>
-        <image style='  width: 50rpx;' mode='widthFix' src='../../resource/index-time.png'></image>活动时间：
+        <image style='  width: 50rpx; height:auto ' mode='widthFix' src='../../resource/index-time.png'></image>活动时间：
         <span class="Txtcolor">{{date}} {{time}}</span>
       </view>
             <view class="row">
-        <image style='  width: 50rpx;' mode='widthFix' src='../../resource/index-number.png'></image>活动需求：
+        <image style='  width: 50rpx; height:auto ' mode='widthFix' src='../../resource/index-number.png'></image>活动需求：
         <span class="Txtcolor">{{surplus}}</span>人
         <view class='gender'> 招募对象：<span class="Txtcolor">{{sex}}</span>
         </view>
@@ -46,7 +46,7 @@
       </view>
 
       <view class="row">
-        <image style='  width: 50rpx;' mode='widthFix' src='../../resource/index-type.png'></image>出行方式： <span class="Txtcolor"> {{tripmode}} </span> 
+        <image style='  width: 50rpx; height:auto ' mode='widthFix' src='../../resource/index-type.png'></image>出行方式： <span class="Txtcolor"> {{tripmode}} </span> 
         <text decode="{{true}}">&nbsp;&nbsp;&nbsp;</text>共
         <span class="Txtcolor"> {{people1}}</span> 人活动</view>
 
@@ -54,7 +54,7 @@
       <view class="note">
 
         <view class='note-title'>
-          <image style='  width: 50rpx;' mode='widthFix' src='../../resource/index-note.png'></image>
+          <image style='  width: 50rpx; height:auto ' mode='widthFix' src='../../resource/index-note.png'></image>
           <view>备注信息:</view>
         </view>
 
