--- a/pages/mine/information/information.wxml
+++ b/pages/mine/information/information.wxml
@@ -19,4 +19,6 @@
     <input disabled='false' class="horizon" placeholder='{{wechat}}'></input>
     <button size='mini' form-type='reset' type='primary' class='reset' hidden='true' bindtap='changeinfo'>修改</button>
   </view></view>
+
+  <official-account style="position:absolute;bottom:10rpx;width:100%;border:0" ></official-account>
 </view>
