--- a/pages/register/register.wxss
+++ b/pages/register/register.wxss
@@ -3,48 +3,46 @@ page{
   width: 100%;
 }
 .background{
-
-
   width: 100%;
   height: 100%;
   background:rgb(247, 247, 247);
 
+
+}
+.officialAccount{
+  position: absolute;
+  width: 100%;
 }
 .main{
   position: relative;
-  top: 100rpx;
+  top: 210rpx;
   margin:0 20rpx;
   border-radius: 30rpx;
   background: #ffffff;
-  box-shadow: 0rpx 0rpx 10rpx 3rpx #e2e2e2
+  box-shadow: 0rpx 0rpx 10rpx 3rpx #e2e2e2;
+
 }
-.content{
-  position: relative;
-}
+
 .place-holder{
   font-weight: lighter;
 }
 .title{
   position: relative;
   top: 10rpx;
-  
   color: #5c5959;
   font-size: large;
   display: flex;
   align-items: center;
-  justify-content: center
+  justify-content: center;
+
   
-
-
 }
 
 .column{
   position: relative;
-  margin: 50rpx 20rpx 0rpx 40rpx;
+  margin: 0rpx 20rpx 50rpx 40rpx;
   top: 50px;
   color: #5c5959;
-
-
   display: flex;
   flex-direction: row;
   align-items: center;
