详情页面 +其它一些地方的修正 20190209
1.详情页面基本结构已完成，页面数据待传递。（详情页面基于首页修改，数据命名规则和首页的完全一致。同时，还有一个未定义的数据--“还差?人”） 
  分享按钮功能已完成。立即加入按钮未完成（已加入的人显示“你已加入”未加入的显示“立即加入”）


2.首页背景不完整显示修正，图标大小修正，去掉一些没用的元素
3.发布页面的图标拉伸修正

--- a/pages/index/index-template/index-template.wxml
+++ b/pages/index/index-template/index-template.wxml
@@ -12,18 +12,18 @@
 
 
     <view class='main'>
-    <view class='detail-title'>详情</view>
+
     
   
     
       <view class='start-end'>
    
-      <view class='start-end-title'>   <image style='  width: 50rpx; height:auto ' mode='widthFix' src='../../resource/index-start.png'></image>活动集合：</view>
+      <view class='start-end-title'>   <image style='  width: 30rpx;margin:0 10rpx; height:auto ' mode='widthFix' src='../../resource/index-start.png'></image>活动集合：</view>
        <view class='start-end-text'>{{start_name}}</view>
        </view>
       <view class='start-end'>
      
-      <view class='start-end-title'> <image style='  width: 50rpx; height:auto ' mode='widthFix' src='../../resource/index-end.png'></image>活动地点：</view> 
+      <view class='start-end-title'> <image style='  width: 30rpx; height:auto ;margin:0 10rpx' mode='widthFix' src='../../resource/index-end.png'></image>活动地点：</view> 
       <view class='start-end-text'>{{end_name}}</view>
       </view>
 
