--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -3,12 +3,7 @@
 page{
   height: 100%
 }
-.background{
-  width: 100%;
-  height: 100%;
-  background:#f7f7f7;
 
-}
 .From{
   position: fixed;
   top :27rpx;
@@ -74,5 +69,14 @@ page{
   height: 80rpx;
   border: 1rpx rgb(86, 146, 180) solid;
   border-radius: 37rpx;
+}
+.notice{
+  position: relative;
+  bottom: -200rpx;
+  font-size: xx-small;
+  font-weight: lighter;
+  text-align: center;
+  width: 100%;
+  color: #8d8d8d
 }
 @import "index-template/index-template.wxss";
