--- a/pages/register/register.wxss
+++ b/pages/register/register.wxss
@@ -1,19 +1,13 @@
 page{
   height: 100%;
   width: 100%;
-}
-.background{
-  width: 100%;
-  height: 100%;
-  background:#0A6E92;
-
-
+ background:#0A6E92;
 }
 
 .main{
   position: relative;
   top: 120rpx;
-  margin:0 20rpx;
+  margin:0 40rpx;
   border-radius: 25rpx;
   background: #ffffff;
 
@@ -31,22 +25,40 @@ page{
   display: flex;
   align-items: center;
   justify-content: center;
+  border-bottom: solid 4rpx #f5f5f5;
+  margin: 0 50rpx
+
 
   
 }
 
 .column{
   position: relative;
-  margin: 0rpx 20rpx 50rpx 40rpx;
-  top: 50px;
+  margin: 20rpx 20rpx 40rpx 50rpx;
+  top: 30px;
   color: #5c5959;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-label{
-  margin: 0 0 0 20rpx
+
+.column2{
+  position: relative;
+  top: 55rpx;
+  color: #5c5959;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #f8f8f8;
+  padding: 20rpx 50rpx;
+  border-radius: 25rpx;
+
+
 }
+.img-title{
+  margin: 0 10rpx;
+}
+
 .important_color{
   color: red;
 }
@@ -59,30 +71,16 @@ label{
   text-align: center;
   height: 70rpx;
   line-height: 70rpx;
-  background: #f3f3f3;
+  background: #eeeeee;
   border-radius: 30rpx;
-  margin: 0 10rpx 0 70rpx ;
+  margin: 0 10rpx 0 50rpx ;
 
 }
-.inputVcode{
-  position: relative;
-  
-  background: #f3f3f3;
-  border-top-left-radius: 30rpx;
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 30rpx;
-  border-bottom-right-radius: 0;
-  text-align: center;
-  height: 70rpx;
-  line-height: 70rpx;
-  margin: 0 0rpx 0 80rpx;
-  width: 365rpx
 
-  
-}
 .getnumber{
-  position: relative;
-  right: 40rpx;
+  z-index: 100;
+  position: absolute;
+  right: 50rpx;
   width: 130rpx;
   height: 70rpx;
   line-height: 70rpx;
@@ -92,8 +90,8 @@ label{
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 30rpx;
   font-weight: lighter;
-  font-size: 0.7rem;
-  background-color:#4d8cb1;
+  font-size: 30rpx;
+  background-color:#0A6E92;
   color: #ffffff
 
 
@@ -101,56 +99,27 @@ label{
 .check_icon{
   float: right
 }
-.WeChat{
-  display: flex;
-  flex-direction: row;
-  margin: 20rpx 60rpx 20rpx 80rpx;
-  align-items: center;
-  border-bottom: solid #ececec 4rpx;
-  padding: 30rpx 0;
-  
-  
 
 
-}
-
-.row1{
-  position: relative;
- 
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 170rpx 60rpx 20rpx 80rpx ;
-
-
-
-}
-.row2{
-  position: relative;
- 
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 100rpx 0 0 0;
-  bottom: 10rpx;
-
-}
 .agree{
   display: flex;
   flex-direction: row;
   position: relative;
-  margin: -80rpx 10rpx 0 40rpx
+  
 }
 .submit-btn{
+ 
   position: relative;
-  bottom: 40rpx;
+  left: 80rpx;
+
+
   display: flex;
   align-items: center;
   justify-content: center;
   height: 70rpx;
   width: 180rpx;
   text-align: center;
-  background-color:#2E6E92;
+  background-color:#0A6E92;
   border-radius: 40rpx;
   color: white;
 
@@ -161,13 +130,13 @@ label{
   border-bottom: 3rpx solid #d8997c
 }
 .text2{
-  position: relative;
-  top: 190rpx;
+  position: absolute;
+  bottom: 100rpx;
   font-size:x-small;
   font-weight: lighter;
   color: #f0f0f0;
-
- text-align:center;
+  width: 100%;
+  text-align:center;
 
 
 
@@ -176,16 +145,17 @@ label{
   font-size: small;
   position: absolute;
   z-index: 100;
-  bottom: 5rpx;
-  left: 35%;
-  width: 30%;
-  font-weight: lighter;
-  background-color: #0A6E92;
-  color: #ffffff;
+  bottom: 10rpx;
+  left: 20%;
+  width: 60%;
+  border-radius: 20rpx;
+  background-color: #ffffff;
+  font-weight: bold;
+  color: #318aaa;
   display: flex;
   flex-direction: row;
   align-items: center;
-justify-content: center
+ justify-content: center;
 
   
 }
